--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ user-select: none;
 body {
   color: #2b2c48;
   font-family: "Jost", sans-serif;
-  background-image: url(4.jpeg);
+  background-image: url(main.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
