--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 body {
   color: #2b2c48;
   font-family: "Jost", sans-serif;
-  background-image: url(assets/main.jpeg);
+  background-image: url(main.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
